updating version adding gempath